fable/test/syntax_error/bad_false.f
      program prog
      logical a
      a = .fals.
      end
